[package]
name = "rigetti-pyo3"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/rigetti/rigetti-pyo3"
readme = "README.md"
categories = ["development-tools::ffi"]
keywords = ["python", "pyo3", "ffi"]
description = "Utilities for creating a Python wrapper for a Rust library."
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["complex", "time"]
complex = ["num-complex", "num-traits", "pyo3/num-complex"]
extension-module = ["pyo3/extension-module"]

[dependencies]
num-complex = { version = "0.4.0", optional = true }
num-traits = { version = "0.2.15", optional = true }
paste = "1.0"
pyo3 = { version = "0.20", default-features = false, features = ["macros", "multiple-pymethods"] }
# time has a "stable minus two MSRV" policy, which doesn't jive with
# our more permissive MSRV
# https://github.com/time-rs/time/discussions/535
time = { version = ">=0.3, <=0.3.28", optional = true }

[dev-dependencies]
thiserror = "1.0"
