[package]
name = "rigetti-pyo3"
version = "0.4.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rigetti/rigetti-pyo3"
readme = "README.md"
categories = ["development-tools::ffi"]
keywords = ["python", "pyo3", "ffi"]
description = "Utilities for creating a Python wrapper for a Rust library."
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["complex", "time"]
time = ["dep:time"]
abi3 = ["pyo3/abi3"]
complex = ["dep:num-complex", "dep:num-traits", "pyo3/num-complex"]
indexmap = ["dep:indexmap", "pyo3/indexmap"]
extension-module = ["pyo3/extension-module"]

[dependencies]
num-complex = { version = "0.4.0", optional = true }
num-traits = { version = "0.2.15", optional = true }
paste = "1.0"
pyo3 = { version = "0.20", default-features = false, features = ["macros", "multiple-pymethods"] }
# time has a "stable minus two MSRV" policy, which doesn't jive with
# our more permissive MSRV
# https://github.com/time-rs/time/discussions/535
time = { version = ">=0.3, <=0.3.37", optional = true }
indexmap = { version = "2.0.0", optional = true }
internment = { version = "0.8.1", features = ["arc"] }

[dev-dependencies]
thiserror = "2.0"
