[package]
name = "optipy"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rigetti/rigetti-pyo3"
readme = "README.md"
categories = ["development-tools::ffi"]
keywords = ["python", "pyo3", "ffi"]
description = "Macro for stripping PyO3-related attributes when using features."
rust-version = "1.78"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", features = [ "full", "visit-mut" ] }

